[package]
name = "backbrain-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
md5 = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tungstenite = "0.29.0"
uuid = { version = "1.23.1", features = ["serde"] }
